--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 2500
-MONGODB_URI = mongodb+srv://piumikadil:Yn9gkPy7klEqygsT@cluster0.ybyj7s5.mongodb.net/nodejs?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://piumikadil:Aipt7RtZjsPjh1uh@pos.x4ruoau.mongodb.net/?retryWrites=true&w=majority
+
