--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 2500
-MONGODB_URI = mongodb+srv://piumikadil:Aipt7RtZjsPjh1uh@pos.x4ruoau.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = 
 
